# libshairport

./: .gitignore  INSTALL.md  Makefile.am  README  README.md  configure.ac  configure.in  libshairport.pc.in  meson.build  meson_options.txt  project.config
src/: Makefile.am  alac.c  alac.h  hairtunes.c  hairtunes.h  shairport.c  shairport.h  shairport_private.h  socketlib.c
src/lib/: common.h  meson.build  shairport.c  shairport.h  socketlib.c  version.h
